// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A.js - flow-verify: A.js 1`] = `
/* @flow */
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */

`;

exports[`index.js - flow-verify: index.js 1`] = `
/* @flow */
require('A');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
require("A");

`;
